modelsdir = $(pkgdatadir)/data/models
dist_models_DATA = \
		beachhouse2.egg \
		bh2.png \
		bridge.egg \
		cityhall.egg \
		eve.egg \
		eveface.png \
		eve-jump.egg \
		eve-offbalance.egg \
		eve.png \
		eve-run.egg \
		eve-walk.egg \
		fh.png \
		gazebo.egg \
		gorilla.png \
		gorillawalking.egg \
		lilsmiley.egg.pz \
		material-20-cl.png \
		panda.egg.pz \
		panda-walk.egg.pz \
		smiley.egg.pz \
		texturemap.png
