modelsdir = $(pkgdatadir)/data/models
dist_models_DATA = \
		buildings/beachhouse2.egg \
		buildings/bh2.png \
		buildings/bridge.egg \
		buildings/cityhall.egg \
		buildings/fh.png \
		buildings/gazebo.egg \
		buildings/material-20-cl.png \
		buildings/texturemap.png \
		eve/eve.egg \
		eve/eveface.png \
		eve/eve-jump.egg \
		eve/eve-offbalance.egg \
		eve/eve.png \
		eve/eve-run.egg \
		eve/eve-walk.egg \
		gorilla/gorilla.png \
		gorilla/gorillawalking.egg \
		misc/lilsmiley.egg.pz \
		panda.egg.pz \
		panda-walk.egg.pz \
		smiley.egg.pz
