AM_CPPFLAGS = -iquote$(top_srcdir)/include -iquote$(top_srcdir)/include/Support/tinyxlm2 $(ELY_CPPFLAGS)
AM_CXXFLAGS = $(ELY_CXXFLAGS)
AM_LDFLAGS = $(ELY_LDFLAGS)

#ltlibraries
pkglib_LTLIBRARIES = \
		libaicomponents.la

#ltlibraries sources
libaicomponents_la_SOURCES = \
		CrowdAgent.cpp \
		CrowdAgentTemplate.cpp \
		NavMesh.cpp \
		NavMeshTemplate.cpp \
		SteerPlugIn.cpp \
		SteerPlugInTemplate.cpp \
		SteerVehicle.cpp \
		SteerVehicleTemplate.cpp
