AM_CPPFLAGS = -iquote$(top_srcdir)/include -iquote$(top_srcdir)/include/Support/tinyxlm2 $(ELY_CPPFLAGS)
AM_CXXFLAGS = $(ELY_CXXFLAGS)
AM_LDFLAGS = $(ELY_LDFLAGS)

#ltlibraries
pkglib_LTLIBRARIES = \
		libaudiocomponents.la

#ltlibraries sources
libaudiocomponents_la_SOURCES = \
		Listener.cpp \
		ListenerTemplate.cpp \
		Sound3d.cpp \
		Sound3dTemplate.cpp
