AM_CPPFLAGS = -iquote$(top_srcdir)/include -iquote$(top_srcdir)/include/Support/tinyxlm2 $(ELY_CPPFLAGS)
AM_CXXFLAGS = $(ELY_CXXFLAGS)
AM_LDFLAGS = $(ELY_LDFLAGS)

#ltlibraries
pkglib_LTLIBRARIES = \
		libcommoncomponents.la

#ltlibraries sources
libcommoncomponents_la_SOURCES = \
		Default.cpp \
		DefaultTemplate.cpp \
		GameConfig.cpp \
		GameConfigTemplate.cpp
