AM_CPPFLAGS = -iquote$(top_srcdir)/include -iquote$(top_srcdir)/include/Support/tinyxlm2 $(ELY_CPPFLAGS)
AM_CXXFLAGS = $(ELY_CXXFLAGS)
AM_LDFLAGS = $(ELY_LDFLAGS)

#ltlibraries
pkglib_LTLIBRARIES = \
		libcontrolcomponents.la

#ltlibraries sources
libcontrolcomponents_la_SOURCES = \
		Chaser.cpp \
		ChaserTemplate.cpp \
		Driver.cpp \
		DriverTemplate.cpp
