AM_CPPFLAGS = -iquote$(top_srcdir)/include -iquote$(top_srcdir)/include/Support/tinyxlm2 $(ELY_CPPFLAGS)
AM_CXXFLAGS = $(ELY_CXXFLAGS)
AM_LDFLAGS = $(ELY_LDFLAGS)

#ltlibraries
pkglib_LTLIBRARIES = \
		libgame.la

#ltlibraries sources
libgame_la_SOURCES = \
		GameAIManager.cpp \
		GameAudioManager.cpp \
		GameBehaviorManager.cpp \
		GameControlManager.cpp \
		GameManager.cpp \
		GamePhysicsManager.cpp \
		GameSceneManager.cpp
